# seo-arbitrage-machine

./: .env.example  .gitignore  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/dsf_api/: __init__.py  app.py  cli.py  jobs.py  schemas.py
apps/api/src/dsf_api/static/: console.css  index.html
data/: manifest.json
data/mocks/: evaluation.json  keyword_metrics.json  optimize_content.json  schema_discovery.json
data/sample/: compliance_sample.csv
scripts/: verify_foundation.py
templates/calculator/: README.md
templates/calculator/src/pages/: index.astro
templates/directory/: package.json
templates/directory/src/pages/: index.astro
tests/: conftest.py  test_agent_bridge.py  test_ahrefs.py  test_api.py  test_compiler.py  test_compiler_hydration.py  test_config.py  test_deployer.py  test_engine.py  test_evaluator.py  test_jobs.py  test_live.py  test_mcp.py  test_optimizer.py  test_scout_agent.py  test_scout_miner.py  test_scout_sources.py
