[project]
name = "datasiteforge-api"
version = "0.1.0"
description = "DataSiteForge API gateway: FastAPI control plane over the full lifecycle."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasiteforge-core",
    "datasiteforge-engine",
    "datasiteforge-scout",
    "datasiteforge-compiler",
    "datasiteforge-deployer",
    "datasiteforge-optimizer",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsf_api"]
